# libparallax

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
demo/: CMakeLists.txt  demo.cpp
libparallax/core/: attacks.hpp  bitboard.hpp  core.cpp  core.hpp  move.cpp  move.hpp  position.cpp  position.hpp  zobrist.hpp
libparallax/eval/: eval.cpp  eval.hpp
libparallax/movegen/: movegen.cpp  movegen.hpp
libparallax/perft/: perft.hpp
libparallax/search/: search.cpp  search.hpp  transposition_table.cpp  transposition_table.hpp
libparallax/uci/: uci.cpp  uci.hpp
tests/: CMakeLists.txt  tests.cpp
